@@ -1,14 +1,7 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM openjdk:11
 
-FROM openjdk:8-jre-slim
+RUN gradle assemble
+COPY target/*.jar devops.jar
 
 EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/*.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/*.jar"]
+ENTRYPOINT ["java", "-jar", "/devops.jar"]
